[tool.poetry]
name = "gittoolbox"
version = "0.3.0"
description = ""
authors = ["David bradford <david.bradford@mongodb.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dbradf/gittoolbox"

[tool.poetry.scripts]
git-heatmap = 'gittoolbox.heatmap.heatmap_cli:create'
git-coupling = 'gittoolbox.coupling.coupling_cli:coupling'

[tool.poetry.dependencies]
python = "^3.7"
Click = "^7.0"
GitPython = "^3.0.5"
structlog = "^19.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-black = "^0.3.7"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
pytest-mypy = "^0.4"
pytest-pydocstyle = "^2.0"
pytest-sugar = "^0.9.2"
pytest-isort = "^0.3.1"

[tool.black]
line-length = 100